feat(todos): add /todos page

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,11 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-// $font-size-root: 20px;
+$font-size-root: 20px;
+$rand-color: #8230f1;
+
+$xs: '(max-width: 599px)';
+$sm: '(min-width: 600px) and (max-width: 956px)';
+$md: '(min-width: 960px) and (max-width: 1263px)';
+$lg: '(min-width: 1264px) and (max-width: 1903px)';
+$xl: '(min-width: 1904px)';
